added new testcases

--- a/TestReports/2025-04-24_21.35.22Test-Report-.html
+++ b/TestReports/2025-04-24_21.35.22Test-Report-.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">FunctionalTesting</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Apr 7, 2025 03:36:13 pm</span></a>
+<a href="#"><span class="badge badge-primary">Apr 24, 2025 09:35:22 pm</span></a>
 </li>
 </ul>
 </div>
@@ -79,9 +79,9 @@
           tag=""
           device="">
           <div class="test-detail">
-            <p class="name">test1</p>
+            <p class="name">multipleproducts</p>
             <p class="text-sm">
-              <span>3:37:30 pm</span> / <span>00:00:00:125</span>
+              <span>9:36:09 pm</span> / <span>00:00:00:189</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -89,10 +89,10 @@
 <div class="detail-head">
 <div class="p-v-10">
 <div class="info">
-<h5 class="test-status text-pass">test1</h5>
-<span class='badge badge-success'>04.07.2025 3:37:30 pm</span>
-<span class='badge badge-danger'>04.07.2025 3:37:30 pm</span>
-<span class='badge badge-default'>00:00:00:125</span>
+<h5 class="test-status text-pass">multipleproducts</h5>
+<span class='badge badge-success'>04.24.2025 9:36:09 pm</span>
+<span class='badge badge-danger'>04.24.2025 9:36:10 pm</span>
+<span class='badge badge-default'>00:00:00:189</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -104,9 +104,9 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>3:37:30 pm</td>
+        <td>9:36:10 pm</td>
         <td>
-          test case is passedtest1
+          test case is passedmultipleproducts
         </td>
       </tr>
   </tbody>
@@ -128,13 +128,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Apr 7, 2025 03:36:13 pm</h3>
+<h3>Apr 24, 2025 09:35:22 pm</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Apr 7, 2025 03:37:33 pm</h3>
+<h3>Apr 24, 2025 09:36:18 pm</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -204,7 +204,7 @@
 </div></div>
 <script>
 var timeline = {
-"test1":0.125
+"multipleproducts":0.189
 };
 </script>
 <div class="row">
