--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -4,15 +4,16 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>testcases.Multiplequantity</td>
+<td>testcases.PagenationTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>selectmultipleqnty</td>
-<td>&nbsp;</td></tr>
+<td>pagenation</td>
+<td>sanity </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
