--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,10 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8ea374">  <td>25/05/02 10:39:44</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.teardown()[pri:0, instance:testcases.Multiplequantity@6fd83fc1]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@991505714</td>   <td></td> </tr>
-<tr bgcolor="8ea374">  <td>25/05/02 10:38:59</td>   <td>-44271</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup(java.lang.String)[pri:0, instance:testcases.Multiplequantity@6fd83fc1]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@991505714</td>   <td></td> </tr>
-<tr bgcolor="d68fcd">  <td>25/05/02 10:39:13</td>   <td>-30337</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Multiplequantity.selectmultipleqnty()[pri:0, instance:testcases.Multiplequantity@6fd83fc1]">selectmultipleqnty</td> 
+<tr bgcolor="8ffcb7">  <td>25/05/17 16:11:30</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PagenationTest.pagenation()[pri:0, instance:testcases.PagenationTest@7bd4937b]">pagenation</td> 
   <td>main@991505714</td>   <td></td> </tr>
+<tr bgcolor="f96c77">  <td>25/05/17 16:11:48</td>   <td>18319</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.teardown()[pri:0, instance:testcases.PagenationTest@7bd4937b]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@991505714</td>   <td></td> </tr>
+<tr bgcolor="8ffcb7">  <td>25/05/17 16:11:30</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PagenationTest.pagenation()[pri:0, instance:testcases.PagenationTest@7bd4937b]">pagenation</td> 
+  <td>main@991505714</td>   <td></td> </tr>
+<tr bgcolor="f96c77">  <td>25/05/17 16:10:41</td>   <td>-48720</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup(java.lang.String,java.lang.String)[pri:0, instance:testcases.PagenationTest@7bd4937b]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@991505714</td>   <td></td> </tr>
 </table>
